# white-room-dynamics

./: CMakeLists.txt  LICENSE  README.md
docs/: BUILD.md  PARAMETERS.md  PRESETS.md
